--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,71 @@
   <title>Document Title</title>
 </head>
 <body>
-  <h1>Welcome to CS 2350!</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+  <div class="jumbotron jumbotron-fluid mx-3">
+    <div class="mx-3">
+      <h1 class="display-4">Book Club</h1>
+      <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem commodi ipsam provident laborum distinctio iste optio aut placeat minus obcaecati. Adipisci quia debitis blanditiis eaque magni dolorem. Voluptate, sunt inventore?</p>
+    </div>
+  </div>
+  <div class="float-right mr-3" style="width: 20%;">
+    <h2>Suggest a new book</h2>
+    <form id="myForm">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input type="title" class="form-control" id="title" name="title">
+      </div>
+      <div class="form-group">
+        <label for="poster">Poster</label>
+        <input type="url" class="form-control" id="poster" name="poster">
+      </div>
+      <div class="form-group">
+        <label for="author">Author</label>
+        <input type="text" class="form-control" id="author" name="author">
+      </div>
+      <div class="form-group">
+        <label for="description">Description</label>
+        <textarea class="form-control" id="description" rows="3" name="description"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="publication">Publication Year</label>
+        <input type="number" class="form-control" id="publication" name="publication">
+      </div>
+    </form>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="button" class="btn btn-danger cancel-form">Cancel</button>
+  </div>
+  </div>
+  <h2 class="ml-3">Suggested Books</h2>
+  <div class="row" id="cards">
+    
+  </div>
+  </div>
+  
+  <footer class="d-flex justify-content-center">All right reserved.</footer>
   <script src="javascripts/application.js"></script>
 </body>
 </html>
