--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,6 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
   </nav>
   <div class="jumbotron jumbotron-fluid mx-3">
@@ -61,17 +57,13 @@
         <label for="publication">Publication Year</label>
         <input type="number" class="form-control" id="publication" name="publication">
       </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <button type="button" class="btn btn-danger cancel-form">Cancel</button>
-  </div>
-  </div>
-  <h2 class="ml-3">Suggested Books</h2>
-  <div class="row" id="cards">
     
   </div>
   </div>
-  
+    <h2 class="ml-3">Suggested Books</h2>
+    <div class="row" id="cards"></div>
   <footer class="d-flex justify-content-center">All right reserved.</footer>
   <script src="javascripts/application.js"></script>
 </body>
